--- a/3d.html
+++ b/3d.html
@@ -4,7 +4,7 @@
         <h1>과학실 3d</h1>
         <meta charset="utf-8">
         <title>과학실 3d</title>
-        <link rel="stylesheet" href="css/style2.css">
+        <link rel="stylesheet" href="style2.css">
         <style>
             .img-box{
                 margin: 150px auto;
