--- a/3층.html
+++ b/3층.html
@@ -7,7 +7,7 @@
         <title>3층 과학실</title>
     </head>
     <body>
-        <img src="img/프레젠테이션1.png" usemap="#image-map" />
+        <img src="프레젠테이션1.png" usemap="#image-map" />
 
         <map name="image-map">
             <area
