--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <h3>이 웹페이지는 베타버전입니다</h3>
         <meta charset="utf-8">
         <title>정원초화재대피도</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
         <li><a href="scool2.html"></li>
     </head>
     <body>
