--- a/scool2.html
+++ b/scool2.html
@@ -5,7 +5,7 @@
         <h2>0.5ver</h2>
         <meta charset="utf-8">
         <title>정원초화재대피도</title>
-        <link rel="stylesheet" href="css/style2.css">
+        <link rel="stylesheet" href="style2.css">
     <h1>정원초 화재 대피도</h1>
     <h2>0.5ver</h2>
     <h3>시간 관계상 버튼이 여기에 있습니다</h3>
